# pypreset

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml  server.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: docs.yaml  lint.yaml  publish.yaml  test.yaml
docs/: architecture.rst  conf.py  index.rst  mcp-server.rst  presets.rst  quickstart.rst  templates.rst
docs/api/: act_runner.rst  augment_generator.rst  docker_utils.rst  generator.rst  index.rst  mcp_server.rst  metadata_utils.rst  models.rst  preset_loader.rst  project_analyzer.rst  template_engine.rst  user_config.rst  validator.rst  versioning.rst
schemas/: preset.schema.json
scripts/: check_tool_versions.py  generate_schema.py  pre-push
src/pypreset/: __init__.py  act_runner.py  augment_generator.py  badge_generator.py  cli.py  docker_utils.py  generator.py  inspect.py  interactive_prompts.py  metadata_utils.py  migration.py  models.py  preset_loader.py  project_analyzer.py  template_engine.py  user_config.py  versioning.py
tests/: __init__.py  conftest.py  test_act_runner.py  test_augment_generator.py  test_badge_generator.py  test_check_tool_versions.py  test_cli.py  test_cli_versioning.py  test_docker_utils.py  test_generator.py  test_inspect.py  test_integration.py  test_metadata_utils.py  test_migration.py  test_models.py  test_preset_loader.py  test_project_analyzer.py  test_readme_template.py  test_template_engine.py  test_user_config.py  test_validator.py  test_versioning.py  test_workflow_validation.py
(+70 files in other folders)
